template took Capitalize var as input

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,6 +1,6 @@
 <!-- index.html -->
 {{if .Success}}
-    <h1>Thanks for adding a new user with name {{ .name}} and number {{ .phoneNumber}}</h1>
+    <h1>Thanks for adding a new user with name {{.Name}} and number {{.PhoneNumber}}</h1>
 {{else}}
     <h1>Add user</h1>
     <form method="POST">
